# knowledge_base_api

./: .dockerignore  .env.example  .env.example.docker  .gitignore  Dockerfile  README.md  alembic.ini  knowledge_base.db  pyproject.toml
alembic/: env.py
alembic/versions/: 76cdbf70f27f_initial_postgresql_migration.py  aab4be69da76_initial_migration.py
src/knowledge_base_api/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py  services.py
src/knowledge_base_api/routes/: note_tags.py  notes.py  tags.py  users.py
